# security-analysis

./: .gitignore  dev.sh  prod.sh
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs  screener.rs  stock.rs
server/: Cargo.toml
server/src/: cache.rs  helper_functions.rs  helper_structs.rs  main.rs  metrics.rs  other.rs  screener.rs  statements.rs  stock.rs  utils.rs
