[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
log = "0.4.17"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
web-sys = {version = "0.3.61", features = ["HtmlSelectElement"]}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
convert_case = { version = "0.6.0" }
accounting = "0.2.0"
